--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -1,12 +1,12 @@
 // Styling for the navbar
 #mainNav {
-  background-color: $gray-900;
+  background-color: $black;
   .navbar-toggler {
     font-size: 12px;
     right: 0;
     padding: 13px;
     text-transform: uppercase;
-    color: white;
+    color: rgb(0, 0, 0);
     border: 0;
     background-color: $primary;
     @include heading-font;
@@ -18,7 +18,7 @@
     &:active,
     &:focus,
     &:hover {
-      color: darken($primary, 10%);
+      color: lighten($primary, 50%);
     }
   }
   .navbar-nav {
@@ -28,11 +28,11 @@
         font-weight: 400;
         padding: 0.75em 0;
         letter-spacing: 1px;
-        color: white;
+        color: $primary;
         @include heading-font;
         &.active,
         &:hover {
-          color: $primary;
+          color: lighten($primary, 30%);
         }
       }
     }
@@ -63,7 +63,7 @@
     &.navbar-shrink {
       padding-top: 0;
       padding-bottom: 0;
-      background-color: $gray-900;
+      background-color: black;
       .navbar-brand {
         font-size: 1.25em;
         padding: 12px 0;
