--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -1,18 +1,18 @@
 // Styling for the masthead
 header.masthead {
-  text-align: center;
-  color: white;
+  text-align: left;
+  color: rgb(0, 174, 255);
   background-image: url("#{$header-image}");
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-position: center center;
+  background-position: center top 25%;
   background-size: cover;
   .intro-text {
     padding-top: 150px;
     padding-bottom: 100px;
     .intro-lead-in {
       font-size: 22px;
-      font-style: italic;
+      font-style: normal;
       line-height: 22px;
       margin-bottom: 25px;
       @include serif-font;
@@ -33,7 +33,7 @@ header.masthead {
       padding-bottom: 200px;
       .intro-lead-in {
         font-size: 40px;
-        font-style: italic;
+        font-style: normal;
         line-height: 40px;
         margin-bottom: 25px;
         @include serif-font;
