--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -28,7 +28,7 @@
                 alt="{{ project.alt }}"
               />
               <p>{{ project.content }}</p>
-              <button
+<!--               <button
                 class="btn btn-primary"
                 data-dismiss="modal"
                 type="button"
@@ -36,7 +36,7 @@
                 <i class="fas fa-times"></i>
                 {{ site.data.sitetext[site.locale].portfolio.closebutton |
                 default: "Close Project" }}
-              </button>
+              </button> -->
             </div>
           </div>
         </div>
@@ -72,7 +72,7 @@
                 alt="{{ project.alt }}"
               />
               <p>{{ project.content }}</p>
-              <button
+<!--               <button
                 class="btn btn-primary"
                 data-dismiss="modal"
                 type="button"
@@ -80,7 +80,7 @@
                 <i class="fas fa-times"></i>
                 {{ site.data.sitetext.portfolio.closebutton |
                 default: "Close Project" }}
-              </button>
+              </button> -->
             </div>
           </div>
         </div>
