Some updates and mailchimp integration

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -55,4 +55,7 @@
     }
   </style>
   {% endif %}
+
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/019b6e3af4e9cb0a6b475bd56/b193dd1584de4d2298cea37ef.js");</script>
+
 </head>
